# malie-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.helix/: languages.toml
src/: lib.rs  reldate.rs
