[package]
name = "malie"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
time = { version = "0.3.34", features = ["serde", "formatting", "parsing", "macros"] }
url = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
serde_json = { version = "1.0.0" }
