[package]
name = "malie"
version = "0.0.1+v0.1.9.11"
edition = "2024"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.39", features = ["serde", "formatting", "parsing", "macros"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
serde_json = { version = "1.0.140" }
